Compute and include the offset of the sticky box to its enclosing composited layer.

When the main thread moves a sticky object we try to determine how far it was moved
in cc/ to know how much more we still have to move it. However, when the sticky
object is in a composited layer we need to know the expected offset from that layer
rather than from the scroll ancestor.

BUG=649102
TEST=LayerTreeHostCommonTest.StickyPositionCompositedContainer, ScrollingCoordinatorTest.fastScrollingForStickyPosition
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_precise_blink_rel

Review-Url: https://codereview.chromium.org/2401903002
Cr-Commit-Position: refs/heads/master@{#424451}

Former-commit-id: 68e1c292942bc96e212048b7993500244a47dc41